# gbr_daemon

./: .gitignore  CMakeLists.txt  LICENSE  MODULES.md  Makefile  README.md  create_project_structure.sh  pipline.md  project_tree.txt
config/: ospf_d.conf.sample
docker/: Dockerfile  entrypoint.sh  ospf_d.conf  ospf_d.conf.sample
docs/: architecture.md  configuration.md  development.md  troubleshooting.md
include/lib/: buffer.h  kernal_route.h  log.h  memory.h  network.h  prefix.h  thread.h
include/ospf/: ospf.h  ospf_interface.h  ospf_lsa.h  ospf_neighbor.h  ospf_packet.h  ospf_spf.h
scripts/: setup_network.sh  test_ospf.sh  validate_config.sh
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  buffer.c  buffer.h  command.c  command.h  kernal_route.c  kernel_route.c  kernel_route.h  log.c  log.h  memory.c  memory.h  network.c  network.h  prefix.c  prefix.h  thread.c  thread.h
src/ospf/: CMakeLists.txt  ospf_interface.c  ospf_lsa.c  ospf_main.c  ospf_neighbor.c  ospf_packet.c  ospf_spf.c
src/ospf/area/: CMakeLists.txt  ospf_area.c  ospf_area.h  ospf_network.c  ospf_network.h
src/ospf/core/: CMakeLists.txt  ospf_config.c  ospf_config.h  ospf_main.c  ospf_main.h
src/ospf/flood/: CMakeLists.txt  ospf_flood.c  ospf_flood.h
src/ospf/neighbor/: CMakeLists.txt  ospf_interface.c  ospf_interface.h  ospf_neighbor.c  ospf_neighbor.h
src/ospf/packet/: CMakeLists.txt  lsdb.c  lsdb.h  ospf_lsa.c  ospf_lsa.h  ospf_packet.c  ospf_packet.h
src/ospf/routing/: CMakeLists.txt  ospf_ase.c  ospf_ase.h  ospf_route.c  ospf_route.h  ospf_spf.c  ospf_spf.h
src/ospf/utils/: CMakeLists.txt  ospf_debug.c  ospf_debug.h  ospf_snmp.c  ospf_snmp.h  ospf_utils.c  ospf_utils.h
tests/: CMakeLists.txt  test_memory.c
tests/integration/functional/: test_basic_connectivity.sh  test_lsa_exchange.sh  test_route_installation.sh
tests/integration/robustness/: test_link_flap.sh  test_rapid_convergence.sh
tests/integration/stress/: test_high_load.sh  test_large_topology.sh
tests/unit/: CMakeLists.txt
tests/unit/lib/: CMakeLists.txt  test_buffer.c  test_command.c  test_kernel_route.c  test_log.c  test_memory.c  test_network.c  test_prefix.c  test_thread.c
tests/unit/ospf/: CMakeLists.txt
tests/unit/ospf/area/: CMakeLists.txt  test_ospf_area.c  test_ospf_network.c
tests/unit/ospf/core/: CMakeLists.txt  test_ospf_config.c  test_ospf_main.c
tests/unit/ospf/flood/: CMakeLists.txt  test_ospf_flood.c
tests/unit/ospf/neighbor/: CMakeLists.txt  test_ospf_interface.c  test_ospf_neighbor.c
tests/unit/ospf/packet/: CMakeLists.txt  test_ospf_lsa.c  test_ospf_packet.c
tests/unit/ospf/routing/: CMakeLists.txt  test_ospf_ase.c  test_ospf_route.c  test_ospf_spf.c
tests/unit/ospf/utils/: CMakeLists.txt  test_ospf_debug.c  test_ospf_snmp.c  test_ospf_utils.c
